--- a/services.html
+++ b/services.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body{
+            /* background-color: rgba(0, 0, 0, 0.5); */
+            padding: 50px;
+  text-align: center;
+  background-color: #474e5d;
+  color: white;
+}
+        
+        h1{
+            padding: 20px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            text-align: center;
+            justify-content: center;
+            text-shadow: darkgray;
+        }
+        * {
+    margin: 0;
+    padding: 4px;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+p{
+    color: white;
+}
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our services</title>
 </head>
 <body>
     <h1>OUR SERVICES</h1>
-    <p></p>
+    <p>We are dedicated to helping you make the most of your land resources while promoting sustainable land management and responsible land usage. Our comprehensive range of services covers a wide spectrum of land-related needs</p>
+<div><p> Sustainable Land Management<br>
+    Eco-friendly Land Practices: We specialize in implementing sustainable land management practices that minimize environmental impact while maximizing the productivity and longevity of your land assets.</p>
+<p>No matter the size or scope of your project, our experienced team is committed to providing customized services that align with sustainable land management and responsible land usage.</p>
+<p>Contact us today to discuss your specific sustainable land management and land usage requirements</p>
+</div>
 </body>
 </html>
