--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navigation">
                 <a href="#">HOME</a>
                 <a href="about.html">ABOUT</a>
-                <a href="#">SERVICES</a>
+                <a href="services.html">SERVICES</a>
                 <a href="contact.html">CONTACT</a>
                 <a href="login.html"><button class="btn">LOGIN</button></a>
         </nav>
